fixed my aos cause it makes a white space appear on the right of mobile devices

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -7,7 +7,7 @@
         }
     
         h3 {
-            font-size: 1rem;
+            font-size: 1.4rem;
         }
         a {
             font-size: 1.2rem;
@@ -95,6 +95,9 @@
     header {
             h1 {
                 padding: 250px 0 0;
+            }
+            h3 {
+                font-size: 1.2rem;
             }
         }
 
